Bug 109523 - PIVOT TABLE - crash after removing a pivot table + creating new pivot chart
Summary: PIVOT TABLE - crash after removing a pivot table + creating new pivot chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: haveBacktrace
: 108922 109068 (view as bug list)
Depends on:
Blocks: Pivot-Chart
  Show dependency treegraph
 
Reported: 2017-07-27 15:24 UTC by bureautiquelibre
Modified: 2017-08-07 13:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test file (15.91 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-07-27 15:24 UTC, bureautiquelibre
Details
Parameters for pivot table (154.08 KB, image/png)
2017-07-27 15:26 UTC, bureautiquelibre
Details
gdb session with bt (which includes debug symbols) (167.52 KB, text/plain)
2017-07-28 14:58 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2017-07-27 15:24:48 UTC
Created attachment 134906 [details]
Test file

Finally got the steps to reproduce bug.

Steps to reproduce:

1/ Load example file
2/ Create pivot chart from pivot table
3/ Edit axis X to Date scale
4/ Select a cell in pivot table, right click and remove
5/ Go to 1st sheet and create new pivot table (see screencap form parameters to apply)

Causes crash upon pivot table creation.
Tests without the pivot chart steps don't crash, so issue looks related to pivot chart.

Regards,
Eric Ficheux
Comment 1 bureautiquelibre 2017-07-27 15:26:32 UTC
Created attachment 134907 [details]
Parameters for pivot table
Comment 2 bureautiquelibre 2017-07-27 15:29:10 UTC
crashreport.libreoffice.org/stats/crash_details/efc7a9b6-9783-466c-97b9-38bef942c723
crashreport.libreoffice.org/stats/crash_details/750b4c09-ed86-4be4-8c23-1fe4d29b30e8

Couple of related crash reports generated with this test case.
Comment 3 bureautiquelibre 2017-07-27 15:30:38 UTC
*** Bug 109068 has been marked as a duplicate of this bug. ***
Comment 4 bureautiquelibre 2017-07-27 15:31:32 UTC
*** Bug 108922 has been marked as a duplicate of this bug. ***
Comment 5 bureautiquelibre 2017-07-27 15:33:16 UTC
Closed the 2 previous crash reports for the feature.

Likely to be the same issue, I was working on datasets with dates and modifying various options in diagrams when they occured.

Regards,
Eric Ficheux
Comment 6 Dennis Francis 2017-07-28 08:26:54 UTC
Can repro the crash.

Version: 6.0.0.0.alpha0+
Build ID: a976fa5f00a81ff0f006a2da73fded3825e0a7c1
CPU threads: 8; OS: Linux 4.11; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.utf8); Calc: group
Comment 7 Julien Nabet 2017-07-28 14:58:28 UTC
Created attachment 134944 [details]
gdb session with bt (which includes debug symbols)

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached the whole gdb session with bt at the end.
I thought the rest of traces may be interested too.
Comment 8 Dennis Francis 2017-08-02 06:04:30 UTC
Proposed a fix @ https://gerrit.libreoffice.org/40663
Comment 9 Commit Notification 2017-08-02 06:53:13 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9561e0f392de3b99d8a0374486d4c0575b23180b

tdf#109523: Do not forget to remove the chart model from...

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2017-08-03 19:34:20 UTC
I don't reproduce the crash with master sources updated today.
Thank you Dennis!
Comment 11 Commit Notification 2017-08-07 13:06:42 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9f07d72b6e40ca70ee11f0350fd6e5acfefba89&h=libreoffice-5-4

tdf#109523: Do not forget to remove the chart model from...

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.