tdf#109523: Do not forget to remove the chart model from...

data-provider's listener set when the chart model is
getting disposed.

Change-Id: Iafbe1426cdb42059cbb4e2955a257a09aa42ec8e